Задание 7. Добавлена функциональность создания счёта
