# src/main/java/gpb/dus/middle/api/generated/model/ConflictApi.java
@@ -5,7 +5,6 @@ import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonTypeName;
-import java.util.UUID;
 import org.openapitools.jackson.nullable.JsonNullable;
 import java.time.OffsetDateTime;
 import jakarta.validation.Valid;
@@ -17,38 +16,38 @@ import java.util.*;
 import jakarta.annotation.Generated;
 
 /**
- * Формат непредвиденной ошибки (V2)
+ * Невозможно обработать запрос
  */
 
-@Schema(name = "ErrorV2", description = "Формат непредвиденной ошибки (V2)")
-@JsonTypeName("ErrorV2")
+@Schema(name = "Conflict", description = "Невозможно обработать запрос")
+@JsonTypeName("Conflict")
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2024-06-29T01:00:08.524498054+03:00[Europe/Moscow]")
-public class ErrorV2Api {
+public class ConflictApi {
 
-  private String message;
+  private JsonNullable<Object> message = JsonNullable.<Object>undefined();
 
-  private String type;
+  private JsonNullable<Object> type = JsonNullable.<Object>undefined();
 
-  private String code;
+  private JsonNullable<Object> code = JsonNullable.<Object>undefined();
 
-  private UUID traceId;
+  private JsonNullable<Object> traceId = JsonNullable.<Object>undefined();
 
-  public ErrorV2Api() {
+  public ConflictApi() {
     super();
   }
 
   /**
    * Constructor with only required parameters
    */
-  public ErrorV2Api(String message, String type, String code, UUID traceId) {
-    this.message = message;
-    this.type = type;
-    this.code = code;
-    this.traceId = traceId;
+  public ConflictApi(Object message, Object type, Object code, Object traceId) {
+    this.message = JsonNullable.of(message);
+    this.type = JsonNullable.of(type);
+    this.code = JsonNullable.of(code);
+    this.traceId = JsonNullable.of(traceId);
   }
 
-  public ErrorV2Api message(String message) {
-    this.message = message;
+  public ConflictApi message(Object message) {
+    this.message = JsonNullable.of(message);
     return this;
   }
 
@@ -59,16 +58,16 @@ public class ErrorV2Api {
   @NotNull 
   @Schema(name = "message", example = "Произошло что-то ужасное, но станет лучше, честно", requiredMode = Schema.RequiredMode.REQUIRED)
   @JsonProperty("message")
-  public String getMessage() {
+  public JsonNullable<Object> getMessage() {
     return message;
   }
 
-  public void setMessage(String message) {
+  public void setMessage(JsonNullable<Object> message) {
     this.message = message;
   }
 
-  public ErrorV2Api type(String type) {
-    this.type = type;
+  public ConflictApi type(Object type) {
+    this.type = JsonNullable.of(type);
     return this;
   }
 
@@ -79,16 +78,16 @@ public class ErrorV2Api {
   @NotNull 
   @Schema(name = "type", example = "GeneralError", requiredMode = Schema.RequiredMode.REQUIRED)
   @JsonProperty("type")
-  public String getType() {
+  public JsonNullable<Object> getType() {
     return type;
   }
 
-  public void setType(String type) {
+  public void setType(JsonNullable<Object> type) {
     this.type = type;
   }
 
-  public ErrorV2Api code(String code) {
-    this.code = code;
+  public ConflictApi code(Object code) {
+    this.code = JsonNullable.of(code);
     return this;
   }
 
@@ -99,16 +98,16 @@ public class ErrorV2Api {
   @NotNull 
   @Schema(name = "code", example = "123", requiredMode = Schema.RequiredMode.REQUIRED)
   @JsonProperty("code")
-  public String getCode() {
+  public JsonNullable<Object> getCode() {
     return code;
   }
 
-  public void setCode(String code) {
+  public void setCode(JsonNullable<Object> code) {
     this.code = code;
   }
 
-  public ErrorV2Api traceId(UUID traceId) {
-    this.traceId = traceId;
+  public ConflictApi traceId(Object traceId) {
+    this.traceId = JsonNullable.of(traceId);
     return this;
   }
 
@@ -116,14 +115,14 @@ public class ErrorV2Api {
    * Get traceId
    * @return traceId
   */
-  @NotNull @Valid 
+  @NotNull 
   @Schema(name = "traceId", example = "5f59e024-03c7-498d-9fc9-b8b15fd49c47", requiredMode = Schema.RequiredMode.REQUIRED)
   @JsonProperty("traceId")
-  public UUID getTraceId() {
+  public JsonNullable<Object> getTraceId() {
     return traceId;
   }
 
-  public void setTraceId(UUID traceId) {
+  public void setTraceId(JsonNullable<Object> traceId) {
     this.traceId = traceId;
   }
 
@@ -135,11 +134,11 @@ public class ErrorV2Api {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    ErrorV2Api errorV2 = (ErrorV2Api) o;
-    return Objects.equals(this.message, errorV2.message) &&
-        Objects.equals(this.type, errorV2.type) &&
-        Objects.equals(this.code, errorV2.code) &&
-        Objects.equals(this.traceId, errorV2.traceId);
+    ConflictApi conflict = (ConflictApi) o;
+    return Objects.equals(this.message, conflict.message) &&
+        Objects.equals(this.type, conflict.type) &&
+        Objects.equals(this.code, conflict.code) &&
+        Objects.equals(this.traceId, conflict.traceId);
   }
 
   @Override
@@ -150,7 +149,7 @@ public class ErrorV2Api {
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class ErrorV2Api {\n");
+    sb.append("class ConflictApi {\n");
     sb.append("    message: ").append(toIndentedString(message)).append("\n");
     sb.append("    type: ").append(toIndentedString(type)).append("\n");
     sb.append("    code: ").append(toIndentedString(code)).append("\n");
